examples/fail/application_with_non_function.uplp
-- category = "error"
--
-- [metadata]
-- error = "Type.mismatch"
--
-- [metadata.expectation]
-- expected = "?0 -> ?1"
-- got = "Num"
let a = 1 in a 5